sync: check for the occasional edgecase of inadequately zero-padded multiple-n files
we don't actually rely on the zero-padded convention anywhere that I know of, but it is nice to have because it makes for better sorting on the commandline and for filenames to be somewhat more predictable in bulk and to have less typographical variation. This is mostly respected on Gwern.net right now, but there are a few here or there which we don't notice, so we fix those and add a lint to warn about future occurrences.

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -7722,7 +7722,7 @@ default "";
 "~^/image/lesswrong-survey/hpmor/gwern-filteredreviews-quadratic.png.*$" "/doc/lesswrong-survey/hpmor/gwern-filteredreviews-quadratic.png";
 "~^/image/lesswrong-survey/hpmor/gwern-filteredreviews.png.*$" "/doc/lesswrong-survey/hpmor/gwern-filteredreviews.png";
 "~^/image/lesswrong-survey/hpmor/gwern-perday.png.*$" "/doc/lesswrong-survey/hpmor/gwern-perday.png";
-"~^/image/lesswrong-survey/hpmor/gwern-runningtotal-linear-100.png.*$" "/doc/lesswrong-survey/hpmor/gwern-runningtotal-linear-100.png";
+"~^/image/lesswrong-survey/hpmor/gwern-runningtotal-linear-100.png.*$" "/doc/lesswrong-survey/hpmor/gwern-runningtotal-linear-100days.png";
 "~^/image/lesswrong-survey/hpmor/gwern-runningtotal-linear.png.*$" "/doc/lesswrong-survey/hpmor/gwern-runningtotal-linear.png";
 "~^/image/lesswrong-survey/hpmor/gwern-runningtotal-quadratic.png.*$" "/doc/lesswrong-survey/hpmor/gwern-runningtotal-quadratic.png";
 "~^/image/lesswrong-survey/hpmor/gwern-runningtotal.png.*$" "/doc/lesswrong-survey/hpmor/gwern-runningtotal.png";
@@ -7733,7 +7733,7 @@ default "";
 "~^/image/lesswrong-survey/hpmor/gwern-uc-perchapter.png.*$" "/doc/lesswrong-survey/hpmor/gwern-uc-perchapter.png";
 "~^/image/lesswrong-survey/hpmor/gwern-uc-perday.png.*$" "/doc/lesswrong-survey/hpmor/gwern-uc-perday.png";
 "~^/image/lesswrong-survey/hpmor/gwern-uc-quadratic.png.*$" "/doc/lesswrong-survey/hpmor/gwern-uc-quadratic.png";
-"~^/image/lesswrong-survey/hpmor/gwern-uc-runningtotal-linear-100.png.*$" "/doc/lesswrong-survey/hpmor/gwern-uc-runningtotal-linear-100.png";
+"~^/image/lesswrong-survey/hpmor/gwern-uc-runningtotal-linear-100.png.*$" "/doc/lesswrong-survey/hpmor/gwern-uc-runningtotal-linear-100days.png";
 "~^/image/lesswrong-survey/hpmor/gwern-uc-runningtotal.png.*$" "/doc/lesswrong-survey/hpmor/gwern-uc-runningtotal.png";
 "~^/image/lewis-meditation/errorsbymeditationandsubject.png.*$" "/image/lewis-meditation/gwern-errorsbymeditationandsubject.png";
 "~^/image/lewis-meditation/errorsovertime.png.*$" "/image/lewis-meditation/gwern-errorsovertime.png";
@@ -12583,4 +12583,20 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/2025-03-31-gwern-midjourneyv6-scatteringcherryblossoms-scatteringblossoms-mondriantatamimat-shoji-2.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-31-gwern-midjourneyv6-scatteringcherryblossoms-scatteringblossoms-mondriantatamimat-shoji-2.jpg";
 "~^/doc/reinforcement-learning/meta-learning/1995-schmidhuber.pdf.*$" "/doc/reinforcement-learning/meta-learning/continual-learning/1995-schmidhuber.pdf";
 "~^/lorem-april-fools$" "/lorem-april-fools-2026";
-"~^/lorem-april-fools\.md$" "/lorem-april-fools-2026.md";
+"~^/lorem-april-fools\.md$" "/lorem-april-fools-2026.md";"~^/doc/lesswrong-survey/hpmor/gwern-uc-runningtotal-linear-100.png.*$" "/doc/lesswrong-survey/hpmor/gwern-uc-runningtotal-linear-100days.png";
+"~^/doc/lesswrong-survey/hpmor/gwern-runningtotal-linear-100.png.*$" "/doc/lesswrong-survey/hpmor/gwern-runningtotal-linear-100days.png";
+"~^/doc/iq/1984-jensen.pdf.*$" "/doc/iq/1984-jensen-01.pdf";
+"~^/doc/iq/1984-jensen-2.pdf.*$" "/doc/iq/1984-jensen-02.pdf";
+"~^/doc/iq/1984-jensen-3.pdf.*$" "/doc/iq/1984-jensen-03.pdf";
+"~^/doc/iq/1984-jensen-4.pdf.*$" "/doc/iq/1984-jensen-04.pdf";
+"~^/doc/iq/1984-jensen-5.pdf.*$" "/doc/iq/1984-jensen-05.pdf";
+"~^/doc/iq/1984-jensen-6.pdf.*$" "/doc/iq/1984-jensen-06.pdf";
+"~^/doc/iq/1984-jensen-7.pdf.*$" "/doc/iq/1984-jensen-07.pdf";
+"~^/doc/iq/1984-jensen-8.pdf.*$" "/doc/iq/1984-jensen-08.pdf";
+"~^/doc/iq/1984-jensen-9.pdf.*$" "/doc/iq/1984-jensen-09.pdf";
+"~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-04.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-004.mp3";
+"~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-10.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-010.mp3";
+"~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-12.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-012.mp3";
+"~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-15.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-015.mp3";
+"~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-18.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-018.mp3";
+"~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-60.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-060.mp3";
