--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -2823,7 +2823,7 @@
 "~^/1973-jensen-2\.pdf.*$" "/doc/iq/1973-jensen-2.pdf";
 "~^/1983-jensen-2\.pdf.*$" "/doc/genetics/heritable/1983-jensen-2.pdf";
 "~^/1974-jensen-2\.pdf.*$" "/doc/genetics/selection/1974-jensen-2.pdf";
-"~^/1984-jensen-2\.pdf.*$" "/doc/iq/1984-jensen-2.pdf";
+"~^/1984-jensen-2\.pdf.*$" "/doc/iq/1984-jensen-02.pdf";
 "~^/1994-jensen-2\.pdf.*$" "/doc/iq/1994-jensen-2.pdf";
 "~^/doc/iq/1994-jensen-2.pdf;.*$" "/doc/iq/1994-jensen-2.pdf";
 "~^/1965-jensen-2\.pdf.*$" "/doc/psychology/1965-jensen-2.pdf";
@@ -2960,7 +2960,7 @@
 "~^/1963-jensen-3\.pdf.*$" "/doc/iq/1963-jensen-3.pdf";
 "~^/1973-jensen-3\.pdf.*$" "/doc/psychology/1973-jensen-3.pdf";
 "~^/1974-jensen-3\.pdf.*$" "/doc/iq/1974-jensen-3.pdf";
-"~^/1984-jensen-3\.pdf.*$" "/doc/iq/1984-jensen-3.pdf";
+"~^/1984-jensen-3\.pdf.*$" "/doc/iq/1984-jensen-03.pdf";
 "~^/1994-jensen-3\.pdf.*$" "/doc/iq/1994-jensen-3.pdf";
 "~^/1965-jensen-3\.pdf.*$" "/doc/psychology/1965-jensen-3.pdf";
 "~^/1977-jensen-3\.pdf.*$" "/doc/iq/1977-jensen-3.pdf";
@@ -3013,7 +3013,7 @@
 "~^/1963-jensen-4\.pdf.*$" "/doc/psychology/1963-jensen-4.pdf";
 "~^/1973-jensen-4\.pdf.*$" "/doc/iq/1973-jensen-4.pdf";
 "~^/1974-jensen-4\.pdf.*$" "/doc/genetics/selection/1974-jensen-4.pdf";
-"~^/1984-jensen-4\.pdf.*$" "/doc/iq/1984-jensen-4.pdf";
+"~^/1984-jensen-4\.pdf.*$" "/doc/iq/1984-jensen-04.pdf";
 "~^/1994-jensen-4\.pdf.*$" "/doc/iq/1994-jensen-4.pdf";
 "~^/1965-jensen-4\.pdf.*$" "/doc/psychology/1965-jensen-4.pdf";
 "~^/1977-jensen-4\.pdf.*$" "/doc/iq/1977-jensen-4.pdf";
@@ -3050,7 +3050,7 @@
 "~^/1969-centermagazine-vol2-issue5\.pdf.*$" "/doc/iq/1969-centermagazine-vol2-issue5.pdf";
 "~^/1972-jensen-5\.pdf.*$" "/doc/iq/1972-jensen-5.pdf";
 "~^/1992-jensen-5\.pdf.*$" "/doc/iq/1992-jensen-5.pdf";
-"~^/1984-jensen-5\.pdf.*$" "/doc/iq/1984-jensen-5.pdf";
+"~^/1984-jensen-5\.pdf.*$" "/doc/iq/1984-jensen-05.pdf";
 "~^/1994-jensen-5\.pdf.*$" "/doc/iq/1994-jensen-5.pdf";
 "~^/1965-jensen-5\.pdf.*$" "/doc/psychology/1965-jensen-5.pdf";
 "~^/1983-benbow-5\.pdf.*$" "/doc/iq/smpy/1983-benbow-5.pdf";
@@ -3070,7 +3070,7 @@
 "~^/doc/philosophy/ethics/www/arxiv.org/cfbf9920e45cf380db92dc7dccff139a9f520376\.pdf.*$" "/doc/www/arxiv.org/cfbf9920e45cf380db92dc7dccff139a9f520376.pdf";
 "~^/doc/reinforcement-learning/safe/www/arxiv.org/29cf6b5749b5655c16049e5b36321017034a4b86\.pdf.*$" "/doc/www/arxiv.org/29cf6b5749b5655c16049e5b36321017034a4b86.pdf";
 "~^/1972-jensen-6\.pdf.*$" "/doc/iq/1972-jensen-6.pdf";
-"~^/1984-jensen-6\.pdf.*$" "/doc/iq/1984-jensen-6.pdf";
+"~^/1984-jensen-6\.pdf.*$" "/doc/iq/1984-jensen-06.pdf";
 "~^/1994-jensen-6\.pdf.*$" "/doc/iq/1994-jensen-6.pdf";
 "~^/1983-benbow-6\.pdf.*$" "/doc/iq/smpy/1983-benbow-6.pdf";
 "~^/1983-stanley-6\.pdf.*$" "/doc/iq/smpy/1983-stanley-6.pdf";
@@ -3094,7 +3094,7 @@
 "~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/0e20a793a720194f965fa89ee57521b9483496f7\.pdf.*$" "/doc/www/arxiv.org/0e20a793a720194f965fa89ee57521b9483496f7.pdf";
 "~^/doc/statistics/bayes/docs/www/www.srri.umass.edu/73b1486a467a81fdda3cb228e19ad76f6548faf7\.pdf.*$" "/doc/www/www.srri.umass.edu/73b1486a467a81fdda3cb228e19ad76f6548faf7.pdf";
 "~^/1972-jensen-7\.pdf.*$" "/doc/iq/1972-jensen-7.pdf";
-"~^/1984-jensen-7\.pdf.*$" "/doc/iq/1984-jensen-7.pdf";
+"~^/1984-jensen-7\.pdf.*$" "/doc/iq/1984-jensen-07.pdf";
 "~^/1994-jensen-7\.pdf.*$" "/doc/iq/1994-jensen-7.pdf";
 "~^/1983-benbow-7\.pdf.*$" "/doc/iq/smpy/1983-benbow-7.pdf";
 "~^/doc/ai/anime/danbooru/www/escholarship.org/4d373cfadde93bed6067a25edaa0e9c5f9574c08\.pdf.*$" "/doc/www/escholarship.org/4d373cfadde93bed6067a25edaa0e9c5f9574c08.pdf";
@@ -3130,7 +3130,7 @@
 "~^/2007-nice-guidelines-ch8\.pdf.*$" "/doc/statistics/decision/2007-nice-guidelines-ch8.pdf";
 "~^/doc/statistics/2007-nice-guidelines-ch8\.pdf.*$" "/doc/statistics/decision/2007-nice-guidelines-ch8.pdf";
 "~^/1972-jensen-8\.pdf.*$" "/doc/iq/1972-jensen-8.pdf";
-"~^/1984-jensen-8\.pdf.*$" "/doc/iq/1984-jensen-8.pdf";
+"~^/1984-jensen-8\.pdf.*$" "/doc/iq/1984-jensen-08.pdf";
 "~^/1983-benbow-8\.pdf.*$" "/doc/iq/smpy/1983-benbow-8.pdf";
 "~^/doc/ai/nn/sparsity/knowledge-distillation/www/www.cs.cornell.edu/497cc54f77fac7a4f339c850c41a6b928bd80209\.pdf.*$" "/doc/www/www.cs.cornell.edu/497cc54f77fac7a4f339c850c41a6b928bd80209.pdf";
 "~^/doc/darknet-market/silk-road/1/www/www.justice.gov/479c0d255352c7817ae3b1546bcd02513c577c09\.pdf.*$" "/doc/www/www.justice.gov/479c0d255352c7817ae3b1546bcd02513c577c09.pdf";
@@ -3155,7 +3155,7 @@
 "~^/doc/reinforcement-learning/safe/www/arxiv.org/ed6c32c06d89d1b5abdbdbb2cbb7beff2a2efed9\.pdf.*$" "/doc/www/arxiv.org/ed6c32c06d89d1b5abdbdbb2cbb7beff2a2efed9.pdf";
 "~^/fiction/2f63ff9\.pdf.*$" "/doc/www/arxiv.org/5955fac99eae201f84f6432978be2fb402f63ff9.pdf";
 "~^/1984-conner-evaluationstudiesreviewannualvol9\.pdf.*$" "/doc/sociology/1984-conner-evaluationstudiesreviewannualvol9.pdf";
-"~^/1984-jensen-9\.pdf.*$" "/doc/iq/1984-jensen-9.pdf";
+"~^/1984-jensen-9\.pdf.*$" "/doc/iq/1984-jensen-09.pdf";
 "~^/1983-benbow-9\.pdf.*$" "/doc/iq/smpy/1983-benbow-9.pdf";
 "~^/doc/sociology/www/scholar.harvard.edu/e848533e4ef3b0b9b2b2237c4de2d93f1dc5301a\.pdf.*$" "/doc/www/scholar.harvard.edu/e848533e4ef3b0b9b2b2237c4de2d93f1dc5301a.pdf";
 "~^/doc/design/www/arxiv.org/ba41fbdb0a770d750b01b2d0a12a59afa651081a\.pdf.*$" "/doc/www/arxiv.org/ba41fbdb0a770d750b01b2d0a12a59afa651081a.pdf";
@@ -6363,7 +6363,7 @@
 "~^/1983-jensen\.pdf.*$" "/doc/iq/1983-jensen.pdf";
 "~^/1993-jensen\.pdf.*$" "/doc/iq/1993-jensen.pdf";
 "~^/1974-jensen\.pdf.*$" "/doc/iq/1974-jensen.pdf";
-"~^/1984-jensen\.pdf.*$" "/doc/iq/1984-jensen.pdf";
+"~^/1984-jensen\.pdf.*$" "/doc/iq/1984-jensen-01.pdf";
 "~^/1994-jensen\.pdf.*$" "/doc/iq/1994-jensen.pdf";
 "~^/1965-jensen\.pdf.*$" "/doc/psychology/1965-jensen.pdf";
 "~^/1975-jensen\.pdf.*$" "/doc/genetics/selection/1975-jensen.pdf";
