--- a/nginx/rsyncd.conf
+++ b/nginx/rsyncd.conf
@@ -6,28 +6,28 @@ log file = /var/log/rsyncd.log
 
 [danbooru2021]
    path = /home/danbooru/torrent/danbooru2021/
-   comment = Danbooru2021 mirror (see https://gwern.net/danbooru2021 )
+   comment = Danbooru2021 mirror (see <https://gwern.net/danbooru2021>)
    list = yes
    read only = yes
    timeout = 6000
 
 [dnmarchives]
    path = /home/danbooru/torrent/dnmarchives/
-   comment = DNM Archives (2011-2015) mirror
+   comment = DNM Archives (2011–2015) mirror (see <https://gwern.net/dnm-archive>). !WARNING!: This rsync mirror is deprecated; use <https://gwern.net/doc/darknet-market/dnm-archive/file/index> instead. Do not use it; mirror any files you need. Files will be removed on 2026-01-01.
    list = yes
    read only = yes
    timeout = 6000
 
 [biggan]
    path = /home/danbooru/biggan/
-   comment = Neural Net resources: model checkpoints & datasets (BigGAN, GPT-2, StyleGAN, etc)
+   comment = Neural Net resources: model checkpoints & datasets (BigGAN, GPT-2, StyleGAN, etc). !WARNING!: this rsync mirror is deprecated! Do not use it; mirror any files you need. Files will start being removed on 2026-01-01.
    list = yes
    read only = yes
    timeout = 6000
 
 [twdne]
    path = /home/gwern/thiswaifudoesnotexist.net/
-   comment = ThisWaifuDoesNotExist.net full site mirror (all JPGs and text files)
+   comment = ThisWaifuDoesNotExist.net full site mirror (all JPGs and text files). See <https://gwern.net/twdne> for background.
    list = yes
    read only = yes
    timeout = 6000
