--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12600,3 +12600,4 @@ default "";
 "~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-15.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-015.mp3";
 "~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-18.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-018.mp3";
 "~^/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-60.mp3.*$" "/doc/ai/music/2020-04-18-gpt2-midi-bigdataset-060.mp3";
+"~^/doc/genetics/heritable/2025-bicknell.pdf.*$" "/doc/genetics/heritable/rare/2025-bicknell.pdf";
