--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -75,8 +75,8 @@ server {
           text/x-adobe-acrobat-drm ebt;
           application/epub+zip epub;
           text/x-haskell hs;
-          htm text/html;
-          html5 text/html;
+          text/html html;
+          text/html html5;
           application/msaccess mdb;
           message/rfc822 mht;
           application/vnd.oasis.opendocument.text odt;
@@ -110,6 +110,7 @@ server {
           application/octet-stream mtimes rev;
           image/vnd.adobe.photoshop psd;
           application/vnd.sqlite3 sqlite; # Or 'application/x-sqlite3'
+          application/vnd.sqlite3 sqlite3;
           font/woff2 woff2;
           text/x-emacs-lisp el;
           }
