--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20706,6 +20706,20 @@ ortraitfaces-1.png";
 "~^/static/logo.png$" "/static/img/logo/logo.png";
 "~^/doc/darknet-market/aero.png$" "/static/img/logo/logo.png";
 "~^/Tool-AI/.*$" "/tool-ai";
+"~^/search41.*$" "/search";
+"~^/blog/fw.*$" "/blog/index";
+"~^/blog/blog.php.*$" "/blog/index";
+"~^/sr$" "/silk-road";
+"~^/doc/xBrain.*$" "/doc/index";
+"~^/doc/www/www.independent.co.uk/%7B%7Bpath%7D%7D.*$" "https://www.independent.co.uk/";
+"~^/doc/similaritysearch/2020-kidger\.pdf.*$" "";
+"~^/doc/rotten.com/library/bio/robert-mcnamara/$" "/doc/rotten.com/library/bio/usa/robert-mcnamara/index.html";
+"~^/doc/rotten.com/library/bio/richard-perle/$" "/doc/rotten.com/library/bio/usa/richard-perle/index.html";
+"~^/doc/rotten.com/library/bio/oliver-north/$" "/doc/rotten.com/library/bio/usa/oliver-north/index.html";
+"~^/doc/rotten.com/library/bio/joseph-mccarthy/$" "/doc/rotten.com/library/bio/usa/joseph-mccarthy/index.html";
+"~^/doc/rotten.com/library/bio/janet-reno/$" "/doc/rotten.com/library/bio/usa/janet-reno/index.html";
+"~^/doc/rotten.com/library/bio/james-traficant/$" "/doc/rotten.com/library/bio/usa/james-traficant/index.html";
+"~^/feed/atom/$" "https://gwern.substack.com/feed";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
@@ -27168,6 +27182,28 @@ ortraitfaces-1.png";
 "~^/cadmin/.*$" "/404";
 "~^/bills/.*$" "/404";
 "~^/bill/.*$" "/404";
+"~^/winamp.*$" "/404";
+"~^/used.*$" "/404";
+"~^/tinyfilemanager.*$" "/404";
+"~^/sos/.*$" "/404";
+"~^/simple/.*$" "/404";
+"~^/shell/.*$" "/404";
+"~^/sec/.*$" "/404";
+"~^//santiago.*$" "/404";
+"~^/php.*$" "/404";
+"~^/newlms/.*$" "/404";
+"~^/museumbuildingandsurroundingspace.*$" "/404";
+"~^//mah/.*$" "/404";
+"~^/hitech-news.*$" "/404";
+"~^/gins/.*$" "/404";
+"~^//file2.*$" "/404";
+"~^/exploits7.*$" "/404";
+"~^/doc/icons/rouyg.*$" "/404";
+"~^/cpouchon.*$" "/404";
+"~^//content.php.*$" "/404";
+"~^/class-php.*$" "/404";
+"~^/chosen.*$" "/404";
+"~^//bp.php.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
