--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20810,6 +20810,13 @@ ortraitfaces-1.png";
 "~^/sms\.py.*$" "/404";
 "~^/default.js$" "/static/js/script.js";
 "~^/static/js/sidenotes$" "/static/js/sidenotes.js";
+"~^/invertornot/.*$" "/invertornot";
+"~^/doc/spacedrepetition/2014-wissman\.pdf.*$" "/doc/spaced-repetition/index";
+"~^/doc/rotten.com/library/bio/vince-foster/$" "/doc/rotten.com/library/bio/vince-foster/index.html";
+"~^/doc/economics/mechanism-design/1974-coase-2.pdf\&.*$" "/doc/economics/mechanism-design/1974-coase-2.pdf";
+"~^/doc/cat/catnip/survey/2017-08-1$" "/doc/cat/catnip/survey/2017-08-01-gs-reversed.csv";
+"~^/doc/philosophy/2002-steigerwald\.pdf.*$" "/doc/philosophy/brethren-of-purity/2002-steigerwald.pdf";
+"~^/doc/technology/2004-03-30-shirky-situatedsoftware.htmln.*$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
@@ -27294,6 +27301,14 @@ ortraitfaces-1.png";
 "~^/class-php.*$" "/404";
 "~^/chosen.*$" "/404";
 "~^//bp.php.*$" "/404";
+"~^/.windsurf.*$" "/404";
+"~^/.cursor.*$" "/404";
+"~^/smartoptimizer.*$" "/404";
+"~^/shirtkobain.*$" "/404";
+"~^/OVA-UN.*$" "/404";
+"~^/outfits.*$" "/404";
+"~^//modules/.*$" "/404";
+"~^/csxcv.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
