--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -990,7 +990,7 @@
 "~^/doc/psychology/okcupid/weexperimentonhumanbeings.html-https:/medium.com/@okcupid/the-case-for-an-older-woman-99d8cabacdf5.*$" "https:/medium.com/@okcupid/the-case-for-an-older-woman-99d8cabacdf5";
 "~^/static/template/pandoc/template-html5-articleedit.html$" "/static/template/pandoc/template-html5-articleedit.html5";
 "~^/doc/.*/Babylon_5$" "https://en.wikipedia.org/wiki/Babylon_5";
-"~^/gpt4$" "/gpt-5";
+"~^/gpt4$" "/doc/ai/nn/transformer/gpt/4/index";
 "~^/Seeing-Through-the-Fog.*$" "https://www.amazon.com/Seeing-Through-Fog-World-Falls/dp/B08XL6H4X5";
 # "~^/2020/06$" "/newsletter/2020/06";
 "~^/newsletter/2020/06đ$" "/newsletter/2020/06";
@@ -20817,6 +20817,85 @@ ortraitfaces-1.png";
 "~^/doc/cat/catnip/survey/2017-08-1$" "/doc/cat/catnip/survey/2017-08-01-gs-reversed.csv";
 "~^/doc/philosophy/2002-steigerwald\.pdf.*$" "/doc/philosophy/brethren-of-purity/2002-steigerwald.pdf";
 "~^/doc/technology/2004-03-30-shirky-situatedsoftware.htmln.*$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
+"~^/[fF]ukuyama.*$" "/narrowing-circle#the-fukuyama-thesis";
+"~^/doc/aga.*$" "/doc/index";
+"~^/creative-benchmark/.*$" "/creative-benchmark";
+"~^/an-abortion-dialogue.md$" "/abortion.md";
+"~^/presocratic-path-to-atomism.md$" "/atomism.md";
+"~^/backstop/.*$" "/backstop";
+"~^/colder-war/.*$" "/colder-war";
+"~^/Danbooru20$" "/danbooru";
+"~^/difference/.*$" "/difference";
+"~^/Job-IQ$" "/iq-ses";
+"~^/DNB-IQ.*$" "/dnb-faq";
+"~^/DNB-FAQOr.*$" "/dnb-faq";
+"~^/doc/ai/1962M.*$" "/doc/ai/1962-bryson.pdf";
+"~^/dall-e-2$" "/doc/ai/nn/transformer/gpt/dall-e/2/index";
+"~^/doc/anime/eva/1997-ledoux-animeinterviewsthefrst5yearsofanimerica$" "/doc/anime/eva/1997-ledoux-animeinterviewsthefirst5yearsofanimerica.pdf";
+"~^/doc/cs/2021-kha/.*$" "/doc/cs/2021-khan.pdf";
+"~^/doc/tea/2021-tong-figure3-microbiomebyprocessing.png$" "/doc/genetics/microbiome/2021-tong-figure3-microbiomebyprocessing.png";
+"~^/newsletter/.1$" "/doc/newsletter/index";
+"~^/feeds/all$" "/doc/personal/rss-subscriptions.opml";
+"~^/note/elon-musk/.*$" "/doc/psychiatry/bipolar/elon-musk/index";
+"~^/doc/psychology/2019-0$" "/doc/psychology/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html";
+"~^/doc/2011-chahino\.pdf.*$" "/doc/psychology/personality/conscientiousness/2011-chahino.pdf";
+"~^/note/regression/.*$" "/doc/statistics/bayes/regression-to-mean/index";
+"~^/note/pipeline/.*$" "/doc/statistics/order/selection/pipeline/index";
+"~^/doc/technology/2013-8.*$" "/doc/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
+"~^/zeo/zma/.*$" "/zeo/zma";
+"~^/%E2%80%8B%E2%80%8Bembryo-selection.*$" "/embryo-selection";
+"~^/%E2%80%8B%E2%80%8BEverything.*$" "/everything";
+"~^/Evolutionary-Licenses/.*$" "/evolutionary-licenses";
+"~^/fiction/clippy/.*$" "/fiction/clippy";
+"~^/forking-paths/.*$" "/forking-path";
+"~^/Forking-Paths/.*$" "/forking-paths";
+"~^/gpt-3-nonfiction/.*$" "/gpt-3-nonfiction";
+"~^/greenland/.*$" "/greenland";
+"~^/hpmor-predictions/.*$" "/hpmor-prediction";
+"~^/hydrocephalus:.*$" "/hydrocephalus";
+"~^/IQ$" "/iq";
+"~^/language/.*$" "/language";
+"~^/%E2%80%8B%E2%80%8BLittlewood.*$" "/littlewood";
+"~^/lsd-microdosing/.*$" "/lsd-microdosing";
+"~^/maze/.*$" "/maze";
+"~^/modus/.*$" "/modus";
+"~^/mugging/.*$" "/mugging";
+"~^/newsletter/2017/09/.*$" "/newsletter/2017/02";
+"~^/newsletter/2017/10/.*$" "/newsletter/2019/10";
+"~^/Newton/.*$" "/newton";
+"~^/newton/.*$" "/newton";
+"~^/notropics$" "/nootropics";
+"~^/note/attention/.*$" "/note/attention";
+"~^/note/faster/.*$" "/notes/faster";
+"~^/On-Stress/.*$" "/on-stress";
+"~^/question/.*$" "/question";
+"~^/review/bakewell/.*$" "/review/bakewell";
+"~^/Tea-Reviews$" "/review/index";
+"~^/review/time-crimes$" "/review/timecrimes";
+"~^/rock-paper-scissors/.*$" "/rock-paper-scissors";
+"~^/search-case-studies/.*$" "/search-case-studies";
+"~^/doc/design/sidenotes$" "/sidenote";
+"~^/silk-road/.*$" "/silk-road";
+"~^/smpy/.*$" "/smpy";
+"~^/Socks/.*$" "/socks";
+"~^/%E2%80%8B%E2%80%8BFaces$" "/faces";
+"~^/sort--key$" "/sort";
+"~^/main.js$" "/static/build/hakyll.hs";
+"~^/face/static/img/logo/logo-favicon-appletouch-dark.png$" "/static/img/logo/logo-favicon-appletouch-dark.png";
+"~^/face/static/img/logo/logo-favicon-appletouch-dark.png/static/img/logo/logo-favicon-appletouch.png$" "/static/img/logo/logo-favicon-appletouch.png";
+"~^/face/static/img/logo/logo-favicon-appletouch-dark.png/static/img/logo/logo-favicon-appletouch.png/static/img/logo/logo-favicon-small-dark.png$" "/static/img/logo/logo-favicon-small-dark.png";
+"~^/face/static/img/logo/logo-favicon-appletouch-dark.png/static/img/logo/logo-favicon-appletouch.png/static/img/logo/logo-favicon-small-dark.png/static/img/logo/logo-favicon-small.png$" "/static/img/logo/logo-favicon-small.png";
+"~^/Sunk-cost/$" "/sunk-cost";
+"~^/tank/$" "/tank";
+"~^/tank/.*$" "/tank";
+"~^/terrorism-is-not-about-terror/.*$" "/terrorism-is-not-about-terror";
+"~^/Timing/.*$" "/timing";
+"~^/tool-ai/.*$" "/tool-ai";
+"~^/unseeing/.*$" "/unseeing";
+"~^/zeo/Caffeine/$" "/zeo/caffeine";
+"~^/feeds/all.atom$" "https://gwern.substack.com/feed";
+"~^/changelog/feed/$" "https://gwern.substack.com/feed";
+"~^/gpt-5$" "/doc/ai/nn/transformer/gpt/4/index";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
