--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12612,3 +12612,4 @@ default "";
 "~^/static/font/blackletter/EngraversOldEnglish-Regular.ttf.*$" "https://fontmeme.com/fonts/engravers-old-english-font/";
 "~^/static/font/blackletter/GutenbergGothic.ttf.*$" "https://www.fontpalace.com/font-details/gutenberg-gothic/";
 "~^/static/font/blackletter/HansaGothic.ttf.*$" "https://www.dafont.com/hansagotisch.font";
+"~^/doc/politics/2003-rowling-harrypotterandtheorderofthephoenix-ch11-doloresumbridgesspeech.pdf.*$" "/doc/politics/2003-rowling-harrypotterandtheorderofthephoenix-ch11-doloresumbridgespeech.pdf";
