--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12613,3 +12613,6 @@ default "";
 "~^/static/font/blackletter/GutenbergGothic.ttf.*$" "https://www.fontpalace.com/font-details/gutenberg-gothic/";
 "~^/static/font/blackletter/HansaGothic.ttf.*$" "https://www.dafont.com/hansagotisch.font";
 "~^/doc/politics/2003-rowling-harrypotterandtheorderofthephoenix-ch11-doloresumbridgesspeech.pdf.*$" "/doc/politics/2003-rowling-harrypotterandtheorderofthephoenix-ch11-doloresumbridgespeech.pdf";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-17-gwern-gpt4o-duskgloomoxfieldsnoone-infraredflir.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-17-gwern-gpt4o-duskgloomoxfieldsnoone-infraredflir.jpg";
+"~^/doc/ai/nn/diffusion/2025-li-figure1-architectureofnoprop.png.*$" "/doc/ai/nn/diffusion/2025-li-figure1-architectureofnoprop.jpg";
+"~^/doc/reinforcement-learning/safe/2025-04-17-gwern-kittenisfullofcrimemesmeme-openaio3release.png.*$" "/doc/reinforcement-learning/safe/2025-04-17-gwern-kittenisfullofcrimemesmeme-openaio3release.jpg";
