--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20899,6 +20899,7 @@ ortraitfaces-1.png";
 "~^/2025-parliament.*$" "/blog/2025-parliament";
 "~^/.*2025-pandemonium.*$" "/blog/2025-parliament";
 "~^/blog/2025-parliament.+$" "/blog/2025-parliament";
+"~^/decline$" "https://www.foxnews.com/";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
