--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12616,3 +12616,4 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-17-gwern-gpt4o-duskgloomoxfieldsnoone-infraredflir.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-17-gwern-gpt4o-duskgloomoxfieldsnoone-infraredflir.jpg";
 "~^/doc/ai/nn/diffusion/2025-li-figure1-architectureofnoprop.png.*$" "/doc/ai/nn/diffusion/2025-li-figure1-architectureofnoprop.jpg";
 "~^/doc/reinforcement-learning/safe/2025-04-17-gwern-kittenisfullofcrimemesmeme-openaio3release.png.*$" "/doc/reinforcement-learning/safe/2025-04-17-gwern-kittenisfullofcrimemesmeme-openaio3release.jpg";
+"~^/doc/psychiatry/autism/2025-04-25-gwern-gpto3-drstrangelove-meme-bestillmydevilhang.png.*$" "/doc/psychiatry/autism/2025-04-25-gwern-gpto3-drstrangelove-meme-bestillmydevilhand.png";
