--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12617,3 +12617,5 @@ default "";
 "~^/doc/ai/nn/diffusion/2025-li-figure1-architectureofnoprop.png.*$" "/doc/ai/nn/diffusion/2025-li-figure1-architectureofnoprop.jpg";
 "~^/doc/reinforcement-learning/safe/2025-04-17-gwern-kittenisfullofcrimemesmeme-openaio3release.png.*$" "/doc/reinforcement-learning/safe/2025-04-17-gwern-kittenisfullofcrimemesmeme-openaio3release.jpg";
 "~^/doc/psychiatry/autism/2025-04-25-gwern-gpto3-drstrangelove-meme-bestillmydevilhang.png.*$" "/doc/psychiatry/autism/2025-04-25-gwern-gpto3-drstrangelove-meme-bestillmydevilhand.png";
+"~^/doc/design/typography/1616-frisius-elephant.png.*$" "/doc/design/typography/1616-frisius-elephant.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-28-gwern-gpt4o-robotcannibalismdinner-boneappetit.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-28-gwern-gpt4o-robotcannibalismdinner-boneappetite.png";
