--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12619,3 +12619,4 @@ default "";
 "~^/doc/psychiatry/autism/2025-04-25-gwern-gpto3-drstrangelove-meme-bestillmydevilhang.png.*$" "/doc/psychiatry/autism/2025-04-25-gwern-gpto3-drstrangelove-meme-bestillmydevilhand.png";
 "~^/doc/design/typography/1616-frisius-elephant.png.*$" "/doc/design/typography/1616-frisius-elephant.jpg";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-28-gwern-gpt4o-robotcannibalismdinner-boneappetit.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-28-gwern-gpt4o-robotcannibalismdinner-boneappetite.png";
+"~^/doc/ai/nn/diffusion/midjourney/2025-04-28-gwern-midjourneyv6-circuitboard-snek.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-04-28-gwern-midjourneyv6-circuitboard-snek.jpg";
