Blog: refactor into YYYY sub-directories before /blog/ gets out of hand

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12620,3 +12620,105 @@ default "";
 "~^/doc/design/typography/1616-frisius-elephant.png.*$" "/doc/design/typography/1616-frisius-elephant.jpg";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-28-gwern-gpt4o-robotcannibalismdinner-boneappetit.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-04-28-gwern-gpt4o-robotcannibalismdinner-boneappetite.png";
 "~^/doc/ai/nn/diffusion/midjourney/2025-04-28-gwern-midjourneyv6-circuitboard-snek.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-04-28-gwern-midjourneyv6-circuitboard-snek.jpg";
+"~^/blog/2011-i-zombies$" "/blog/2011/i-zombies";
+"~^/blog/2011-i-zombies\.md.*$" "/blog/2011/i-zombies.md";
+"~^/blog/2013-weirdness-points$" "/blog/2013/weirdness-points";
+"~^/blog/2013-weirdness-points\.md.*$" "/blog/2013/weirdness-points.md";
+"~^/blog/2015-dmt-factoring$" "/blog/2015/dmt-factoring";
+"~^/blog/2015-dmt-factoring\.md.*$" "/blog/2015/dmt-factoring.md";
+"~^/blog/2018-brain-imitation-learning$" "/blog/2018/brain-imitation-learning";
+"~^/blog/2018-brain-imitation-learning\.md.*$" "/blog/2018/brain-imitation-learning.md";
+"~^/blog/2019-twdne-website$" "/blog/2019/twdne-website";
+"~^/blog/2019-twdne-website\.md.*$" "/blog/2019/twdne-website.md";
+"~^/blog/2020-gpt2-poetry-collaboration$" "/blog/2020/gpt2-poetry-collaboration";
+"~^/blog/2020-gpt2-poetry-collaboration\.md.*$" "/blog/2020/gpt2-poetry-collaboration.md";
+"~^/blog/2020-mlscaling$" "/blog/2020/mlscaling";
+"~^/blog/2020-mlscaling\.md.*$" "/blog/2020/mlscaling.md";
+"~^/blog/2020-smallcaps-filter$" "/blog/2020/smallcaps-filter";
+"~^/blog/2020-smallcaps-filter\.md.*$" "/blog/2020/smallcaps-filter.md";
+"~^/blog/2021-dream-morality$" "/blog/2021/dream-morality";
+"~^/blog/2021-dream-morality\.md.*$" "/blog/2021/dream-morality.md";
+"~^/blog/2022-active-learning$" "/blog/2022/active-learning";
+"~^/blog/2022-active-learning\.md.*$" "/blog/2022/active-learning.md";
+"~^/blog/2022-cleanup-when$" "/blog/2022/cleanup-when";
+"~^/blog/2022-cleanup-when\.md.*$" "/blog/2022/cleanup-when.md";
+"~^/blog/2022-fastest-human$" "/blog/2022/fastest-human";
+"~^/blog/2022-fastest-human\.md.*$" "/blog/2022/fastest-human.md";
+"~^/blog/2022-pdf-forgery$" "/blog/2022/pdf-forgery";
+"~^/blog/2022-pdf-forgery\.md.*$" "/blog/2022/pdf-forgery.md";
+"~^/blog/2022-scaling-predictions$" "/blog/2022/scaling-predictions";
+"~^/blog/2022-scaling-predictions\.md.*$" "/blog/2022/scaling-predictions.md";
+"~^/blog/2023-good-writing$" "/blog/2023/good-writing";
+"~^/blog/2023-good-writing\.md.*$" "/blog/2023/good-writing.md";
+"~^/blog/2023-littles-law$" "/blog/2023/littles-law";
+"~^/blog/2023-littles-law\.md.*$" "/blog/2023/littles-law.md";
+"~^/blog/2023-mode-collapse$" "/blog/2023/mode-collapse";
+"~^/blog/2023-mode-collapse\.md.*$" "/blog/2023/mode-collapse.md";
+"~^/blog/2023-subtle-poisons$" "/blog/2023/subtle-poisons";
+"~^/blog/2023-subtle-poisons\.md.*$" "/blog/2023/subtle-poisons.md";
+"~^/blog/2024-china-dl$" "/blog/2024/china-dl";
+"~^/blog/2024-china-dl\.md.*$" "/blog/2024/china-dl.md";
+"~^/blog/2024-diminishing-returns$" "/blog/2024/diminishing-returns";
+"~^/blog/2024-diminishing-returns\.md.*$" "/blog/2024/diminishing-returns.md";
+"~^/blog/2024-e-positive$" "/blog/2024/e-positive";
+"~^/blog/2024-e-positive\.md.*$" "/blog/2024/e-positive.md";
+"~^/blog/2024-gamblers-verity$" "/blog/2024/gamblers-verity";
+"~^/blog/2024-gamblers-verity\.md.*$" "/blog/2024/gamblers-verity.md";
+"~^/blog/2024-hardware-hedging$" "/blog/2024/hardware-hedging";
+"~^/blog/2024-hardware-hedging\.md.*$" "/blog/2024/hardware-hedging.md";
+"~^/blog/2024-llm-acceptable-use-policy$" "/blog/2024/llm-acceptable-use-policy";
+"~^/blog/2024-llm-acceptable-use-policy\.md.*$" "/blog/2024/llm-acceptable-use-policy.md";
+"~^/blog/2024-marvel$" "/blog/2024/marvel";
+"~^/blog/2024-marvel\.md.*$" "/blog/2024/marvel.md";
+"~^/blog/2024-marx-brothers$" "/blog/2024/marx-brothers";
+"~^/blog/2024-marx-brothers\.md.*$" "/blog/2024/marx-brothers.md";
+"~^/blog/2024-multiuser-wiki$" "/blog/2024/multiuser-wiki";
+"~^/blog/2024-multiuser-wiki\.md.*$" "/blog/2024/multiuser-wiki.md";
+"~^/blog/2024-openai-mojo$" "/blog/2024/openai-mojo";
+"~^/blog/2024-openai-mojo\.md.*$" "/blog/2024/openai-mojo.md";
+"~^/blog/2024-pemmican$" "/blog/2024/pemmican";
+"~^/blog/2024-pemmican\.md.*$" "/blog/2024/pemmican.md";
+"~^/blog/2024-personalization$" "/blog/2024/personalization";
+"~^/blog/2024-personalization\.md.*$" "/blog/2024/personalization.md";
+"~^/blog/2024-regexp-ai$" "/blog/2024/regexp-ai";
+"~^/blog/2024-regexp-ai\.md.*$" "/blog/2024/regexp-ai.md";
+"~^/blog/2024-rss$" "/blog/2024/rss";
+"~^/blog/2024-rss\.md.*$" "/blog/2024/rss.md";
+"~^/blog/2024-semantic-derealization$" "/blog/2024/semantic-derealization";
+"~^/blog/2024-semantic-derealization\.md.*$" "/blog/2024/semantic-derealization.md";
+"~^/blog/2024-sick-kids$" "/blog/2024/sick-kids";
+"~^/blog/2024-sick-kids\.md.*$" "/blog/2024/sick-kids.md";
+"~^/blog/2024-sydney$" "/blog/2024/sydney";
+"~^/blog/2024-sydney\.md.*$" "/blog/2024/sydney.md";
+"~^/blog/2024-tail-collapse$" "/blog/2024/tail-collapse";
+"~^/blog/2024-tail-collapse\.md.*$" "/blog/2024/tail-collapse.md";
+"~^/blog/2024-tlon$" "/blog/2024/tlon";
+"~^/blog/2024-tlon\.md.*$" "/blog/2024/tlon.md";
+"~^/blog/2024-tolkien$" "/blog/2024/tolkien";
+"~^/blog/2024-tolkien\.md.*$" "/blog/2024/tolkien.md";
+"~^/blog/2024-tools-for-thought-failure$" "/blog/2024/tools-for-thought-failure";
+"~^/blog/2024-tools-for-thought-failure\.md.*$" "/blog/2024/tools-for-thought-failure.md";
+"~^/blog/2024-trajectoid-words$" "/blog/2024/trajectoid-words";
+"~^/blog/2024-trajectoid-words\.md.*$" "/blog/2024/trajectoid-words.md";
+"~^/blog/2024-virtual-comments$" "/blog/2024/virtual-comments";
+"~^/blog/2024-virtual-comments\.md.*$" "/blog/2024/virtual-comments.md";
+"~^/blog/2024-winning-arms-races$" "/blog/2024/winning-arms-races";
+"~^/blog/2024-winning-arms-races\.md.*$" "/blog/2024/winning-arms-races.md";
+"~^/blog/2024-writing-online$" "/blog/2024/writing-online";
+"~^/blog/2024-writing-online\.md.*$" "/blog/2024/writing-online.md";
+"~^/blog/2025-ai-cannibalism$" "/blog/2025/ai-cannibalism";
+"~^/blog/2025-ai-cannibalism\.md.*$" "/blog/2025/ai-cannibalism.md";
+"~^/blog/2025-good-ai-samples$" "/blog/2025/good-ai-samples";
+"~^/blog/2025-good-ai-samples\.md.*$" "/blog/2025/good-ai-samples.md";
+"~^/blog/2025-large-files$" "/blog/2025/large-files";
+"~^/blog/2025-large-files\.md.*$" "/blog/2025/large-files.md";
+"~^/blog/2025-llms-can-be-faster$" "/blog/2025/llms-can-be-faster";
+"~^/blog/2025-llms-can-be-faster\.md.*$" "/blog/2025/llms-can-be-faster.md";
+"~^/blog/2025-meta-doomsday$" "/blog/2025/meta-doomsday";
+"~^/blog/2025-meta-doomsday\.md.*$" "/blog/2025/meta-doomsday.md";
+"~^/blog/2025-parliament$" "/blog/2025/parliament";
+"~^/blog/2025-parliament\.md.*$" "/blog/2025/parliament.md";
+"~^/blog/2025-plumbing-vs-internet$" "/blog/2025/plumbing-vs-internet";
+"~^/blog/2025-plumbing-vs-internet\.md.*$" "/blog/2025/plumbing-vs-internet.md";
+"~^/blog/2025-sake$" "/blog/2025/sake";
+"~^/blog/2025-sake\.md.*$" "/blog/2025/sake.md";
