--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12722,3 +12722,4 @@ default "";
 "~^/blog/2025-plumbing-vs-internet\.md.*$" "/blog/2025/plumbing-vs-internet.md";
 "~^/blog/2025-sake$" "/blog/2025/sake";
 "~^/blog/2025-sake\.md.*$" "/blog/2025/sake.md";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-03-gwern-gpto3-darkmarketplaceensoautumnleaves.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-03-gwern-gpto3-darkmarketplaceensoautumnleaves.jpg";
