--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -1056,6 +1056,9 @@ server {
         # rewrite ^/(?<original>[A-Za-z0-9-]+)/$ /$original permanent; # try to deal with the spiders bruteforcing appending '/' to all essays like '/self-decrypting/' ; although this breaks stuff like '/nootropic' by creating an infinite loop...?
         # rewrite ^/(?<original>[A-Za-z0-9-]+/[a-z0-9-]+)/$ /$original permanent; # BAD creates loops!
 
+        # /blog/ specialcase: we don't want to bother with generating sensible /index for each /blog/YYYY/ when we have YYYY targets on the /blog/index like '/blog/index#2025':
+        rewrite /blog/(?<year>20[0-9][0-9])/index$ /blog/index#$year permanent;
+
         # Gitit dot-page → Markdown .md migration:
         rewrite /(?<original>.*)\.page$ /$original.md permanent;
 
