--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20902,6 +20902,8 @@ ortraitfaces-1.png";
 "~^/decline$" "https://www.foxnews.com/";
 "~^/.*i-remember-lemuria.*$" "/review/lemuria";
 "~^/lemuria.*$" "/review/lemuria";
+"~^/.*[Pp]roject-[Xx]anadu.*$" "/xanadu";
+"~^/.*Xanadu.*$" "/xanadu";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
