--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20904,6 +20904,11 @@ ortraitfaces-1.png";
 "~^/lemuria.*$" "/review/lemuria";
 "~^/.*[Pp]roject-[Xx]anadu.*$" "/xanadu";
 "~^/.*Xanadu.*$" "/xanadu";
+"~^/[Ss]tyle$" "/style-guide";
+"~^/manual-of-style.*$" "/style-guide";
+"~^/manual-style.*$" "/style-guide";
+"~^/m-?o-?s$" "/style-guide";
+"~^/guide-style.*$" "/style-guide";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
