--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15892,7 +15892,8 @@
 "~^/lorem-heading.*$" "/lorem-header";
 "~^/GAN-breeding-experiment$" "/ganbreeder";
 "~^/Shift_work_sleep_disorder$" "https://en.wikipedia.org/wiki/Shift_work_sleep_disorder";
-"~^/bipolar$" "https://en.wikipedia.org/wiki/Bipolar_disorder";
+"~^/bipolar$" "/doc/psychiatry/bipolar/index";
+"~^/bipolar/energy$" "/doc/psychiatry/bipolar/energy/index";
 "~^/The-Mysterious-Stranger.*$" "https://en.wikipedia.org/wiki/The_Mysterious_Stranger";
 "~^/doc/silk-road/2013-10-15-lsdavengersmaff.*$" "10-15-lsdavenger";
 "~^/[Hh]arberge?$" "/harberger";
