--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12732,3 +12732,4 @@ default "";
 "~^/doc/nootropic/quantified-self/1980-bean-figure2-humannailgrowthover36years.png.*$" "/doc/nootropic/quantified-self/nail-growth/1980-bean-figure2-humannailgrowthover36years.png";
 "~^/nail-growth$" "/doc/nootropic/quantified-self/nail-growth/index";
 "~^/doc/philosophy/ethics/2025-05-12-hero-functionvsformalignmentchart-humancanninalism-socialacceptabilityvshumanmeat.jpg.*$" "/doc/philosophy/ethics/2025-05-12-hero-functionvsformalignmentchart-humancannibalism-socialacceptabilityvshumanmeat.jpg";
+"~^/doc/economics/1958-McGee.pdf.*$" "/doc/economics/1958-mcgee.pdf";
