+; rm /index-long as failed experiment with near-zero use (<2 hits/day)

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20914,6 +20914,8 @@ ortraitfaces-1.png";
 "~^/fiction/[Oo]ctober-.*$" "/fiction/october";
 "~^/[Oo]ctober.*$" "/fiction/october";
 "~^/fiction/[Ss]eptember$" "/fiction/october";
+"~^/index-newest$" "/index";
+"~^/index-newest\.md$" "/index.md";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
