--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16743,8 +16743,8 @@
 "~^/.+/Tanks$" "/tanks";
 "~^/TANKS$" "/tanks";
 "~^/doc/cs/Tanks   $" "/tanks";
-"~^/site$" "/links";
-"~^/Site$" "/links";
+"~^/site$" "/about";
+"~^/Site$" "/about";
 "~^/links.html$" "/links";
 "~^/Lin$" "/links";
 "~^/%20author$" "/links";
