--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20916,6 +20916,7 @@ ortraitfaces-1.png";
 "~^/fiction/[Ss]eptember$" "/fiction/october";
 "~^/index-newest$" "/index";
 "~^/index-newest\.md$" "/index.md";
+"~^/static/images/ind.*$" "/static/img/index";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
